@@ -12,7 +12,15 @@
  * granted to use or replicate Red Hat trademarks that are incorporated
  * in this software or its documentation.
  */
+
 package org.candlepin.config;
+
+import static io.smallrye.config.SecretKeys.doLocked;
+
+import io.smallrye.config.ConfigSourceInterceptor;
+import io.smallrye.config.ConfigSourceInterceptorContext;
+import io.smallrye.config.ConfigValue;
+import io.smallrye.config.Priorities;
 
 import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.codec.digest.DigestUtils;
@@ -24,55 +32,61 @@ import org.slf4j.LoggerFactory;
 import java.io.FileInputStream;
 import java.io.InputStream;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
+import java.util.HashSet;
+import java.util.Set;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 
+import jakarta.annotation.Priority;
 
 
-/**
- * EncryptedValueConfigurationParser
- */
-public class EncryptedConfiguration extends PropertiesFileConfiguration {
-    private static final Logger log = LoggerFactory.getLogger(EncryptedConfiguration.class);
+@Priority(Priorities.LIBRARY + 1000)
+public class LegacyEncryptedInterceptor implements ConfigSourceInterceptor {
+    private static final Logger log = LoggerFactory.getLogger(LegacyEncryptedInterceptor.class);
 
-    private String passphrase = null;
+    private final Set<String> encryptedProperties;
+    private String passphrase;
 
-    public EncryptedConfiguration() {
-        // Intentionally left empty
+    public LegacyEncryptedInterceptor(String[] encryptedProperties) {
+        this(new HashSet<>(Arrays.asList(encryptedProperties)));
     }
 
-    public EncryptedConfiguration use(String passphraseProperty) throws ConfigurationException {
-        passphrase = readPassphrase(passphraseProperty);
-        return this;
+    public LegacyEncryptedInterceptor(Set<String> encryptedProperties) {
+        this.encryptedProperties = encryptedProperties;
     }
 
-    public EncryptedConfiguration toDecrypt(String... encryptedProperties) throws ConfigurationException {
-        for (String p : encryptedProperties) {
-            toDecrypt(p);
-        }
-
-        return this;
-    }
-
-    public EncryptedConfiguration toDecrypt(String property) throws ConfigurationException {
-        if (passphrase == null) {
-            log.debug("Passphrase is null. Skipping decrypt.");
-            return this;
-        }
-
-        if (!containsKey(property)) {
+    public ConfigValue getValue(final ConfigSourceInterceptorContext context, final String property) {
+        ConfigValue configValue = doLocked(() -> context.proceed(property));
+        if (configValue == null) {
             log.debug("Can't decrypt missing property: {}", property);
-            return this;
+            return null;
         }
 
-        String toDecrypt = getString(property);
+        if (!encryptedProperties.contains(configValue.getName())) {
+            log.debug("Skipping unencrypted property: {}", property);
+            return configValue;
+        }
+
+        if (passphrase == null) {
+            passphrase = readPassphrase(context);
+        }
+
+        if (StringUtils.isEmpty(passphrase)) {
+            log.debug("Passphrase is empty. Skipping decrypt.");
+            return configValue;
+        }
+
+        String toDecrypt = configValue.getRawValue();
         if (!toDecrypt.startsWith("$1$")) {
             // this is not an encrypted password, just return it
             log.debug("Value for {} is not an encrypted string", property);
-            return this;
+            return configValue;
         }
 
         // remove the magic string
@@ -97,42 +111,38 @@ public class EncryptedConfiguration extends PropertiesFileConfiguration {
             // NOTE: the encrypted password is stored hex base64
             byte[] b64bytes = Base64.decodeBase64(toDecrypt);
             String decrypted = new String(cipher.doFinal(b64bytes));
-            setProperty(property, decrypted);
+            return configValue.withValue(decrypted);
         }
         catch (Exception e) {
             log.error("Failure trying to decrypt value of {}", property, e);
-            throw new ConfigurationException(e);
         }
-
-        return this;
+        return configValue;
     }
 
-    protected String readPassphrase(String passphraseProperty) throws ConfigurationException {
-        if (!containsKey(passphraseProperty)) {
+    private String readPassphrase(final ConfigSourceInterceptorContext context) {
+        ConfigValue configValue = doLocked(() -> context.proceed(ConfigProperties.PASSPHRASE_SECRET_FILE));
+        String passFilePath = configValue.getValue();
+        if (StringUtils.isEmpty(passFilePath)) {
             log.info("No secret file provided.");
             return null;
         }
 
-        String secretFile = getString(passphraseProperty);
-
-        if (StringUtils.isEmpty(secretFile)) {
-            log.warn("{} is present in the configuration but unset", passphraseProperty);
+        Path path = Paths.get(passFilePath);
+        if (!Files.exists(path)) {
+            log.warn("{} is present in the configuration but the file does not exist",
+                ConfigProperties.PASSPHRASE_SECRET_FILE);
             return null;
         }
 
-        log.debug("reading secret file: {}", secretFile);
-
-        try (InputStream bs = new FileInputStream(secretFile)) {
+        log.debug("reading secret file: {}", passFilePath);
+        try (InputStream bs = new FileInputStream(passFilePath)) {
             /* XXX Maybe it'd be better to use the charset the caller specifies during
              * construction?  But just because the config is in that charset doesn't mean
              * the password file is.  Stick with system default for now. */
-            return IOUtils.toString(bs, Charset.defaultCharset().name());
+            return IOUtils.toString(bs, Charset.defaultCharset()).trim();
         }
         catch (Exception e) {
-            String msg = String.format("Could not read: %s", secretFile);
-
-            log.error(msg);
-            throw new ConfigurationException(msg, e);
+            throw new RuntimeException("Could not read: %s".formatted(passFilePath), e);
         }
     }
 }
